# llm-wiki-cli

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GAPS.md  LICENSE  README.md  ROADMAP.md  build_desktop.sh  install-desktop.sh  install.sh  package-lock.json  package.json  pyproject.toml  stryker.conf.json  tsconfig.json  uninstall.sh  vitest.config.ts  vitest.stryker.config.ts
.github/workflows/: ci.yml
docs/: SIGNING.md  cli-json.md
docs/adr/: 001-worker-concurrency.md
docs/baselines/: core-swap-ab-2026-07-09.md  ingest-2026-06-16.md  ingest-2026-06-23.md  ingest-model-comparison-2026-06-25.md  ingest-output-cap-ab-2026-07-08.md  search-2026-07-07.md  search-ask-rag-ab-2026-07-08.md  search-chunk-passages-ab-2026-07-09.md  search-graph-signal-ab-2026-07-09.md  search-query-expansion-ab-2026-07-11.md
docs/perf/: 194-graph-bench.md  model-override.md
evals/: BASELINE.md
evals/retrieval/: golden.yaml
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  cost.json  graph.html  manifest.json
graphify-out/2026-06-14/: .graphify_labels.json  graph.json
graphify-out/2026-06-24/: .graphify_labels.json  GRAPH_REPORT.md  manifest.json
graphify-out/2026-06-25/: .graphify_labels.json  GRAPH_REPORT.md  manifest.json
graphify-out/cache/: stat-index.json
scripts/: build_sidecar.sh  eval_ingestion.py  gen_synthetic_wiki.py  generate-coverage-summary.mjs  ingest_baseline.py  release.sh  search_baseline.py  sidecar_entry.py
scripts/eval_results/: 20260521T172039Z.json  20260521T172136Z.json  20260521T172538Z.json  20260521T172558Z.json  20260521T172710Z.json
src/: index.ts
src/commands/: bootstrap.ts  commit.ts  config.ts  doctor.ts  index.ts  ingest.ts  init.ts  links.ts  lint.ts  log.ts  page.ts  project.ts  query.ts  read.ts  reset.ts  search.ts  source.ts  uninstall.ts
src/llmwiki/: __init__.py
src/templates/: index.ts
src/utils/: agents.ts  git.ts  global-config.ts  misc.ts  paths.ts  templates-dir.ts
templates/: AGENTS.md  WIKI_PROTOCOL.md  wiki.config.yaml
templates/schemas/: agent.schema.md  comparison.schema.md  concept.schema.md  decision.schema.md  lint-report.schema.md  open-question.schema.md  playbook.schema.md  source.schema.md  synthesis.schema.md  workflow.schema.md
tests/: agents.test.ts  bootstrap.test.ts  cli.test.ts  config.test.ts  conftest.py  doctor.test.ts  git.test.ts  global-config.test.ts  index.test.ts  ingest.test.ts  links.test.ts  lint.test.ts  log.test.ts  misc.test.ts  page.test.ts  paths.test.ts  project.test.ts  query.test.ts  read.test.ts  reset.test.ts  search.test.ts  source.test.ts  templates-dir.test.ts  uninstall.test.ts
tests/fixtures/: sample_article.html
tests/sources/: test_audio_extractor.py  test_chunking.py  test_extracted_source.py  test_html_extractor.py  test_pdf_extractor.py
tests/test_agents/: test_backend.py  test_backend_guardrails.py  test_cancellation.py  test_factory.py  test_hybrid_tool.py  test_max_output_tokens.py  test_middleware.py  test_models.py  (+6 more)
ui/: .gitignore  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
ui/src-tauri/: .gitignore  Cargo.toml  README.md  entitlements.plist  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: lib.rs  main.rs
(+299 files in other folders)
