[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-wiki"
version = "2.0.0"
description = "Plataforma local-first de engenharia de conhecimento mantida por LLM."
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "rich>=13.7",
  "keyring>=25",
]

[project.optional-dependencies]
# Fase 1+ (agentes). Em Fase 0 nada de LLM.
agent = ["deepagents>=0.2", "langgraph>=0.2"]
ollama = ["langchain-ollama>=0.2"]
anthropic = ["langchain-anthropic>=0.2"]
openai = ["langchain-openai>=0.2"]
google = ["langchain-google-genai>=2.0"]
api = ["fastapi>=0.110", "uvicorn>=0.29", "python-multipart>=0.0.9"]
mcp = ["mcp>=1.2"]
pdf = ["pypdf>=4.2"]
html = ["trafilatura>=1.8"]
audio = ["faster-whisper>=1.0"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-cov>=5", "mypy>=1.10", "ruff>=0.4", "types-PyYAML", "pre-commit>=3.7"]

[project.scripts]
wiki = "llmwiki.interfaces.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/llmwiki"]
# The built SPA (ui → dist) is git-ignored but must ship in the wheel so
# `wiki serve` can serve it. Build the UI (`cd ui && npm run build`) first.
artifacts = ["src/llmwiki/interfaces/api/dist/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
files = ["src/llmwiki"]
mypy_path = "src"
