[package]
name = "llm-wiki-desktop"
version = "2.0.0"
description = "llm-wiki desktop app (macOS)"
authors = ["roger8b"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "llm_wiki_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
